changing API version to 2.13.0
